--- a/src/components/card.css
+++ b/src/components/card.css
@@ -1,8 +1,7 @@
-.card{
-    display: flex;
-    
-}
+
 .card-child-2{
+    width: 70%;
     display: flex;
     flex-direction: column;
+    color: white;
 }
